added some error messages

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 		 <br>
 		<button class="loginButton" onclick="newUser()">New User</button>
 		<button class="loginButton" onclick="login()">Login</button> 
+		<div id="authError"></div>
 		</div>
 	</div>
-	<div class="ui"></div>
+	<div class="ui">
+		<t id="sometext"><t>
+	</div>
 </div>
 	
 
