changed pw input style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<label for userName>Username </label>
 		<input class="loginInput" id="input_userName" type="text" name="userName"></input>
 		<label for password>Password </label>
-		 <input class="loginInput" id="input_password" type="text" name="Password"></input>
+		 <input class="loginInput" id="input_password" type="password" name="Password"></input>
 		 <br>
 		<button class="loginButton" onclick="newUser()">New User</button>
 		<button class="loginButton" onclick="login()">Login</button> 
