--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<select class="menuInput" id="select_session">
 					<option> None </option>
 				</select>	<br />
+				<button class="menuButton" onclick="beginTurn()"> Begin Turn </button> <br />
 				<button class="menuButton" onclick="previousMenu()"> Back </button> <br />
 		</div>
 
