--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<div id="loginMenu">
 		
 				<label for userName>Username </label>
-				<input class="menuInput" id="input_userName" type="text" name="userName"></input>
+				<input class="menuInput" id="input_userName" type="text" name="userName" value="a@a.com"></input>
 				<label for password>Password </label>
-				 <input class="menuInput" id="input_password" type="password" name="Password"></input>
+				 <input class="menuInput" id="input_password" type="password" name="Password" value="a"></input>
 				 <br>
 				<button class="menuButton" onclick="newUser()">New User</button>
 				<button class="menuButton" onclick="login()">Login</button> 
@@ -39,7 +39,7 @@
 				<input class="menuInput" id="input_sessionName" type="text" name="sessionName"></input>
 				<label for member>Name of Collaborator?</label><br />
 				<input class="menuInput" id="input_member" type="text" name="member"></input>
-				<button class="menuButton" onclick="createSession()"> Create </button> <br />
+				<button id="createSessionButton" class="menuButton" onclick="createSession()"> Create </button> <br />
 				<button class="menuButton" onclick="loadMainMenu()"> Back </button> <br />
 
 		</div>
