changed some styling

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 		<div class="loadingBox" id="loading" style="opacity: 0; display: none;">
 				<div id="loadingProgress">
-					<h4> Loading <img id="loadingSpinner" src="content/loader.gif"</img> </h4> 
+					<h4> <img id="loadingSpinner" src="content/loader.gif"</img> </h4> 
 				</div>
 				<div id="loadingResult" style="display: none;">
 				</div>
