removed default login info

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<div id="loginMenu">
 		
 				<label for userName>Username </label>
-				<input class="menuInput" id="input_userName" type="text" name="userName" value="a@a.com"></input>
+				<input class="menuInput" id="input_userName" type="text" name="userName" value=""></input>
 				<label for password>Password </label>
-				 <input class="menuInput" id="input_password" type="password" name="Password" value="a"></input>
+				 <input class="menuInput" id="input_password" type="password" name="Password" value=""></input>
 				 <br>
 				<button class="menuButton" onclick="newUser()">New User</button>
 				<button class="menuButton" onclick="login()">Login</button> 
