changed an icon

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	
 	<div id="drawingWidget">
 		<div class="literally"></div>
-		<button class="menuButton" id="endTurnButton" onclick="endTurn()">End Turn</button>
+		<input type="image" height="40" width="60" src="content/pass-napkin.png" id="endTurnButton" onclick="endTurn()"></button>
 	</div>
 </div>
 
