--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="content/style.css">
 	<link rel="stylesheet" type="text/css" href="content/bootstrap.min.css">
 	<link href="content/literallycanvas.css" rel="stylesheet">
@@ -43,7 +44,7 @@
 
 				<label for sessionName> Session Name </label>
 				<input class="menuInput" id="input_sessionName" type="text" name="sessionName"></input>
-				<label for member>Name of Collaborator?</label><br />
+				<label for member>Collaborator</label><br />
 				<input class="menuInput" id="input_member" type="text" name="member"></input>
 					<label id="select_src_label"> Use Existing Napkin as Source? </label>
 					<select class="menuInput" id="select_src">
@@ -102,7 +103,7 @@
 
 		<div class="loadingBox" id="loading" style="opacity: 0; display: none;">
 				<div id="loadingProgress">
-					<h4><img id="loadingSpinner" src="content/loader.gif"></img> </h4> 
+					<h4><img id="loadingSpinner" src="content/loader1.gif"></img> </h4> 
 				</div>
 				<div id="loadingResult" style="display: none;">
 				</div>
