--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div class="center-block">
-	<h1 id="title" class="text-center headerStyle"> Welcome to Paper Napkin </h1>
+	<h1 id="title" class="text-center headerStyle"> <img src="content/logo.jpg" height="100px" width="100px"></h1>
 	<div id="menuWrapper" class="menuBox center-block">
 		<div id="loginMenu">
 		
