Fixed menu widths. Corrected markup.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1 id="title" class="text-center headerStyle"> <img src="content/logo.jpg" height="100px" width="100px"></h1>
             <div id="menuWrapper" class="menuBox center-block">
                 <div id="loginMenu">
-                    <label for userName>Username </label>
+                    <label for="userName">Username </label>
                     <input class="menuInput" id="input_userName" type="text" name="userName" value=""></input>
-                    <label for password>Password </label>
+                    <label for="password">Password </label>
                     <input class="menuInput" id="input_password" type="password" name="Password" value=""></input>
                     <br>
                     <button class="menuButton" onclick="newUser()">New User</button>
