changed some text

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </select>
                     <br />
                     <button class="menuButton" onclick="beginTurn()"> Begin Turn </button> <br />
-                    <button class="menuButton" onclick="deleteProject()"> Delete Project </button> <br />
+                    <button class="menuButton" onclick="deleteProject()"> Publish Napkin </button> <br />
                     <button class="menuButton" onclick="loadMainMenu()"> Back </button> <br />
                 </div>
                 <div id="finishedMenu" style="opacity: 0; display: none;">
