--- a/index.html
+++ b/index.html
@@ -104,10 +104,14 @@
                 <input type="image" height="40" width="60" src="content/pass-napkin.png" id="endTurnButton" onclick="endTurn()"></button>
             </div>
             <div id="sliderWidget" style="display: none;">
-                <button class="menuButton" onclick="menuReturn()">Return to App</button>
-                <button class="menuButton" onclick="sliderPrev()">Previous</button>
-                <button class="menuButton" onclick="sliderNext()">Next</button>
-                <canvas id="sliderCanvas"></canvas>
+                <div class="center-block" style="width:700px; height:75px;">
+                    <button class="menuButton" onclick="menuReturn()">Return to App</button>
+                    <button class="menuButton" onclick="sliderPrev()">Previous</button>
+                    <button class="menuButton" onclick="sliderNext()">Next</button>
+                </div>
+                <div style="text-align:center;">
+                    <canvas id="sliderCanvas" height="600" width="800" style="border: 2px solid black"></canvas>
+                </div>
             </div>
         </div>
     </body>
